<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">"GroceryListR "</string>
    <string name="action_settings">Settings</string>
    <string name="action_add_to_calendar">Add To Calendar</string>
    <string name="hello_world">Hello World!</string>
    <string name="no_recipe">No Recipe</string>
    <string name="no_recipe_description">No Recipe Selected For Today.</string>
    <string name="default_rating">5.0</string>
    <string name="action_save">Save</string>
    <string name="title_activity_recipe_view">RecipeViewActivity</string>
    <string name="title_activity_new_recipe">NewRecipeActivity</string>
    <string name="recipe_name">Recipe Name</string>
    <string name="recipe_description">Description</string>
    <string name="serving_size">Serving Size</string>
    <string name="instructions">Instructions</string>
    <string name="ingredients">Ingredients</string>
    <string name="ingredient_name">Ingredient Name</string>
    <string name="button_new_ingredient">+ New Ingredient </string>
    <string name="optional">Optional</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="hide_recipes">Hide Recipes</string>

    <string-array name="amount2array">
        <item>0/16</item>
        <item>1/16</item>
        <item>1/8</item>
        <item>3/16</item>
        <item>1/4</item>
        <item>5/16</item>
        <item>3/8</item>
        <item>7/16</item>
        <item>1/2</item>
        <item>9/16</item>
        <item>5/8</item>
        <item>11/16</item>
        <item>3/4</item>
        <item>13/16</item>
        <item>7/8</item>
        <item>15/16</item>
    </string-array>
    <string-array name="recipe_measurements_array">
        <item>Bars</item>
        <item>Boxes</item>
        <item>Cans</item>
        <item>Cloves</item>
        <item>Count</item>
        <item>Cups</item>
        <item>Ears</item>
        <item>Fillets</item>
        <item>Fl. Oz.</item>
        <item>Gallons</item>
        <item>Liters</item>
        <item>mL</item>
        <item>Ounces</item>
        <item>Packages</item>
        <item>Pieces</item>
        <item>Pints</item>
        <item>Pounds</item>
        <item>Quarts</item>
        <item>Slices</item>
        <item>Squares</item>
        <item>Tablespoons</item>
        <item>Teaspoons</item>
    </string-array>
    <string-array name="ingredient_preparation_array">
        <item>Preparation</item>
        <item>Chopped</item>
        <item>Cooked</item>
        <item>Crumbled</item>
        <item>Dried</item>
        <item>Flaked</item>
        <item>Large</item>
        <item>Pitted</item>
        <item>Shelled</item>
        <item>Shredded</item>
        <item>Sliced</item>
        <item>Small</item>
        <item>Toasted</item>
        <item>Uncooked</item>
        <item>Whipped</item>
    </string-array>

</resources>