<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="80dp"
    android:clickable="true"
    android:longClickable="true"
    android:background="@drawable/image_bg_selector"
    android:onClick="viewRecipe" >
    
    <TextView
         android:id="@+id/recipe_name"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
         android:lines="1"
    	 android:ellipsize="end"
         android:singleLine="true" 
         android:text="@string/no_recipe"
         android:textColor="#000000"
         android:textSize="14sp"
         android:textStyle="bold" />

     <ImageView
         android:id="@+id/list_image"
         android:layout_width="140dp"
         android:layout_height="120dp"
         android:layout_centerHorizontal="true"
         android:layout_below="@+id/recipe_name"
         android:contentDescription="@string/hello_world"
         android:src="@drawable/ic_default_image" />
     
     <Button 
         android:id="@+id/button_edit_recipe"
         android:layout_height="30dp"
         android:layout_width="30dp"
         android:layout_below="@+id/list_image"
         android:layout_marginTop="6dp"
         android:layout_marginBottom="6dp"
         android:layout_marginLeft="10dp"
         android:layout_alignParentLeft="true"
         android:background="@drawable/pencil" />
     
     <TextView 
         android:id="@+id/text_rating"
         android:layout_height="40dp"
         android:layout_width="60dp"
         android:layout_below="@+id/list_image"
         android:layout_centerHorizontal="true"
         android:textColor="#e74c3c"
         android:textSize="32sp"
         android:gravity="center"
         android:text="@string/default_rating" />
     
     <Button 
         android:id="@+id/button_favorite"
         android:layout_height="30dp"
         android:layout_width="30dp"
         android:layout_below="@+id/list_image"
         android:layout_marginTop="6dp"
         android:layout_marginBottom="6dp"
         android:layout_marginRight="10dp"
         android:layout_alignParentRight="true"
         android:background="@drawable/favorite" />

</RelativeLayout>
