<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".NewRecipeActivity" >

    <TextView
        android:id="@+id/editRecipeName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world" />
    <EditText 
        android:id="@+id/edit_recipe_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editRecipeName"
		android:hint="@string/hello_world"/>
    <TextView 
        android:id="@+id/editDescription"
        android:layout_below="@id/edit_recipe_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world"/>
    <EditText 
        android:id="@+id/edit_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editDescription"
		android:hint="@string/hello_world"/>
    <TextView
        android:id="@+id/editServingSize"
        android:layout_below="@id/edit_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/serving_size" />
    <EditText 
        android:id="@+id/edit_serving_size"
        android:layout_below="@id/editServingSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberSigned"
        android:hint="@string/serving_size" />
    <TextView 
        android:id="@+id/editInstructions"
        android:layout_below="@id/edit_serving_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instructions" />
    <EditText
        android:id="@+id/edit_instructions"
        android:layout_below="@id/editInstructions"
        android:layout_width="fill_parent"
        android:layout_height="200dp"
        android:hint="@string/instructions" />
   <ImageView 
        android:id="@+id/button_add_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentRight="true"
        android:contentDescription="@string/hello_world"
        android:src="@drawable/ic_default_image"
        android:onClick="captureImage" />
</RelativeLayout>
